@@ -19,6 +19,7 @@ aTunes 2.1.0
 - FIX: Wrong song added as favorite in last.fm [3035260]
 - FIX: Music length 0:00 with some MP3 files
 - FIX: SplitPanes size incorrect after restart [3019779]
+- FIX: Skipping songs raises playcount and last.fm count in files with length 0 [3061462]
 
 aTunes 2.0.1
 -------------
